# quickcount

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  index.html  script.js  script.ts  style.css
.github/workflows/: doc.yml
src/: main.rs  qc_editor.rs  textstat.rs
