[package]
name = "quickcount"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
categories = ["mathematics", "gui"]
description = "Sleek, minimal and blazingly fast word counter app."
keywords = ["gui", "statistics", "word-count", "text"]
readme = "README.md"
authors = ["walker84837"]
repository = "https://github.com/walker84837/quickcount"
rust-version = "1.85.0"

[profile.dev]
debug = false

[profile.release]
strip = true
lto = true
overflow-checks = true
panic = "abort"

[dependencies]
iced = "0.13.1"
regex = "1.11.1"
